Fix text alignment in Recipes

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -34,6 +34,7 @@
       justify-content: space-between;
       align-items: center;
       gap: 10px;
+      text-align: center;
 
       h2 {
         font-size: 1.3rem;
